fix: triangle image not showing

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -19,7 +19,7 @@ main {
 }
 
 .main-menu {
-  background-image: url('/dist/images/bg-triangle.svg');
+  background-image: url('./images/bg-triangle.svg');
   background-position: 50% 160%;
   background-repeat: no-repeat;
   background-size: 15rem 15rem;
